# email-spam-filter

./: .gitignore
email_spam_filter/: .gitignore  LICENSE  README.md  pyproject.toml  test_package_usage.py
email_spam_filter/src/email_spam_filter/: __init__.py  inference.py  logging_utils.py  schemas.py  viz.py
email_spam_filter/src/email_spam_filter/resources/: metadata.json  spam_pipeline.joblib
email_spam_filter/src/email_spam_filter/training/: data.py  evaluate.py  features.py  train.py
email_spam_filter/streamlit_ui/: app.py
email_spam_filter/streamlit_ui/pages/: Batch_Predict.py  Model_Insights.py
email_spam_filter/tests/: test_inference.py  test_training_cli.py  test_viz.py
