[project]
name = "email-spam-filter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Navenkumar-Balasubramaniam", email = "navenkumar297@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["uv_build>=0.10.3,<0.11.0"]
build-backend = "uv_build"
