[build-system]
requires = ["setuptools>=69", "wheel","uv_build>=0.9.24,<0.10.0"]
build-backend = "uv_build"


[project]
name = "email-spam-filter"
version = "0.1.0"
description = "A pretrained email spam classifier with prediction API, training CLI, and optional Streamlit UI."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "G7" }
]

dependencies = [
    "scikit-learn>=1.3",
    "numpy>=1.23",
    "joblib>=1.3",
    "pandas>=2.0",
    "streamlit>=1.30",
    "matplotlib>=3.7"
]

[project.urls]
Homepage = "https://github.com/Navenkumar-Balasubramaniam/email-spam-filter"

[tool.uv]
package = true

[tool.uv.sources]
email_spam_filter = { path = "src/email_spam_filter"}

# Console entrypoint for training
[project.scripts]
email-spam-train = "email_spam_filter.training.train:main"


# -----------------------------
# SETUPTOOLS CONFIG (src layout)
# -----------------------------
[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

# Include bundled model + metadata
[tool.setuptools.package-data]
email_spam_filter = [
    "resources/*.joblib",
    "resources/*.json"
]


# -----------------------------
# TESTING
# -----------------------------
[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-ra"